--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: ^2.1.5
-  flutter_bloc: ^9.0.0
+  flutter_bloc: ^8.1.3
+  hydrated_bloc: ^9.1.2
+  equatable: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,6 +66,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/assets/StateCapitols.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
