--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
   hydrated_bloc: ^9.1.2
   equatable: ^2.0.5
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
